Issue 6445 (Long headers are cut off in source view) http://code.google.com/p/fbug/issues/detail?id=6445

--- a/extension/skin/classic/net.css
+++ b/extension/skin/classic/net.css
@@ -52,6 +52,10 @@
     background-color: #B4B4B4;
 }
 
+.netInfoHeadersContainer {
+    overflow-x: auto;
+}
+
 .netHeaderSorted {
     background-color: #8CA0BE;
 }
